@@ -3,6 +3,9 @@ Version 4.0.1.3 'Severard':
 	- Logfile reset on SIGHUP
 	(Gustavo Garcia suggestion).
 	- Log reset CLi command.
+	- Some error code corrections:
+	    * "Mobility forbidden" error changed, to value 405.
+	    * "Wrong credentials" situation is now treated as error 441.
 
 06/06/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.0.1.2 'Severard':
